--- a/web_backend/src/web_backend.Blazor.Client/Pages/Login.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Login.razor
@@ -1,5 +1,6 @@
 @page "/login"
 @using web_backend.Blazor.Client.Services
+@using System.ComponentModel.DataAnnotations
 @inject AuthService AuthService
 @inject NavigationManager NavigationManager
 
@@ -10,7 +11,7 @@
         <h5 class="card-title">Sign In</h5>
         <EditForm Model="@loginModel" OnValidSubmit="HandleValidSubmit">
             <DataAnnotationsValidator />
-            <ValidationSummary />
+            <Microsoft.AspNetCore.Components.Forms.ValidationSummary />
 
             <div class="form-group mt-3">
                 <label for="username">Username</label>
@@ -59,10 +60,10 @@
     private class LoginModel
     {
         [Required]
-        public string UserName { get; set; }
+        public string UserName { get; set; } = string.Empty;
 
         [Required]
-        public string Password { get; set; }
+        public string Password { get; set; } = string.Empty;
 
         public bool RememberMe { get; set; }
     }
