--- a/web_backend/src/web_backend.Blazor.Client/Pages/Components/Login.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Components/Login.razor
@@ -1,4 +1,4 @@
-﻿@page "/login"
+﻿@page "/login-redirect"
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @inject NavigationManager Navigation
 
