--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -273,8 +273,8 @@
 
     private void LoginClick()
     {
-        // Use our new Blazor login page
-        NavigationManager.NavigateTo("/account/login", forceLoad: false);
+        // Use our login page at the correct path
+        NavigationManager.NavigateTo("/login", forceLoad: false);
     }
 
     private void RegisterClick()
